fix bad signing