@@ -19,6 +19,7 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 import java.lang.reflect.Field;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import org.apache.maven.execution.MavenExecutionRequest;
@@ -68,9 +69,11 @@ class HashVerifyMojoTest {
     void shouldPassWhenHashesMatch() throws Exception {
       // Given
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "# AI Agent Instructions");
+      Files.write(mdFile, "# AI Agent Instructions".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-256", false);
-      Files.writeString(tempDir.resolve("AGENTS.md.sha256"), hash + "  AGENTS.md\n");
+      Files.write(
+          tempDir.resolve("AGENTS.md.sha256"),
+          (hash + "  AGENTS.md\n").getBytes(StandardCharsets.UTF_8));
 
       // When/Then
       assertDoesNotThrow(() -> mojo.execute());
@@ -80,10 +83,12 @@ class HashVerifyMojoTest {
     @DisplayName("should fail verification when hash does not match (tampered file)")
     void shouldFailWhenHashMismatch() throws Exception {
       // Given
-      Files.writeString(tempDir.resolve("AGENTS.md"), "# AI Agent Instructions");
-      Files.writeString(
+      Files.write(
+          tempDir.resolve("AGENTS.md"), "# AI Agent Instructions".getBytes(StandardCharsets.UTF_8));
+      Files.write(
           tempDir.resolve("AGENTS.md.sha256"),
-          "0000000000000000000000000000000000000000000000000000000000000000  AGENTS.md\n");
+          "0000000000000000000000000000000000000000000000000000000000000000  AGENTS.md\n"
+              .getBytes(StandardCharsets.UTF_8));
 
       // When/Then
       MojoExecutionException ex = assertThrows(MojoExecutionException.class, () -> mojo.execute());
@@ -95,7 +100,9 @@ class HashVerifyMojoTest {
     @DisplayName("should fail when source file is missing for a hash file")
     void shouldFailWhenSourceFileMissing() throws Exception {
       // Given
-      Files.writeString(tempDir.resolve("MISSING.md.sha256"), "somehash  MISSING.md\n");
+      Files.write(
+          tempDir.resolve("MISSING.md.sha256"),
+          "somehash  MISSING.md\n".getBytes(StandardCharsets.UTF_8));
 
       // When/Then
       MojoExecutionException ex = assertThrows(MojoExecutionException.class, () -> mojo.execute());
@@ -106,7 +113,7 @@ class HashVerifyMojoTest {
     @DisplayName("should log scan complete when no hash files are found")
     void shouldWarnWhenNoHashFiles() throws Exception {
       // Given
-      Files.writeString(tempDir.resolve("README.md"), "content");
+      Files.write(tempDir.resolve("README.md"), "content".getBytes(StandardCharsets.UTF_8));
 
       // When/Then
       assertDoesNotThrow(() -> mojo.execute());
@@ -119,14 +126,16 @@ class HashVerifyMojoTest {
       // Given
       Path file1 = tempDir.resolve("AGENTS.md");
       Path file2 = tempDir.resolve("SKILL.md");
-      Files.writeString(file1, "Agent content");
-      Files.writeString(file2, "Skill content");
-      Files.writeString(
+      Files.write(file1, "Agent content".getBytes(StandardCharsets.UTF_8));
+      Files.write(file2, "Skill content".getBytes(StandardCharsets.UTF_8));
+      Files.write(
           tempDir.resolve("AGENTS.md.sha256"),
-          HashUtils.computeHash(file1, "SHA-256", false) + "  AGENTS.md\n");
-      Files.writeString(
+          (HashUtils.computeHash(file1, "SHA-256", false) + "  AGENTS.md\n")
+              .getBytes(StandardCharsets.UTF_8));
+      Files.write(
           tempDir.resolve("SKILL.md.sha256"),
-          HashUtils.computeHash(file2, "SHA-256", false) + "  SKILL.md\n");
+          (HashUtils.computeHash(file2, "SHA-256", false) + "  SKILL.md\n")
+              .getBytes(StandardCharsets.UTF_8));
 
       // When/Then
       assertDoesNotThrow(() -> mojo.execute());
@@ -139,12 +148,14 @@ class HashVerifyMojoTest {
       Path subDir = tempDir.resolve("skills");
       Files.createDirectory(subDir);
       Path skillFile = subDir.resolve("SKILL.md");
-      Files.writeString(skillFile, "Original content");
+      Files.write(skillFile, "Original content".getBytes(StandardCharsets.UTF_8));
       String correctHash = HashUtils.computeHash(skillFile, "SHA-256", false);
-      Files.writeString(subDir.resolve("SKILL.md.sha256"), correctHash + "  SKILL.md\n");
+      Files.write(
+          subDir.resolve("SKILL.md.sha256"),
+          (correctHash + "  SKILL.md\n").getBytes(StandardCharsets.UTF_8));
 
       // Tamper
-      Files.writeString(skillFile, "Tampered content");
+      Files.write(skillFile, "Tampered content".getBytes(StandardCharsets.UTF_8));
 
       // When/Then
       MojoExecutionException ex = assertThrows(MojoExecutionException.class, () -> mojo.execute());
@@ -168,13 +179,17 @@ class HashVerifyMojoTest {
       // Given
       Path targetDir = tempDir.resolve("target");
       Files.createDirectory(targetDir);
-      Files.writeString(targetDir.resolve("generated.md"), "generated");
-      Files.writeString(targetDir.resolve("generated.md.sha256"), "badhash  generated.md\n");
+      Files.write(targetDir.resolve("generated.md"), "generated".getBytes(StandardCharsets.UTF_8));
+      Files.write(
+          targetDir.resolve("generated.md.sha256"),
+          "badhash  generated.md\n".getBytes(StandardCharsets.UTF_8));
 
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-256", false);
-      Files.writeString(tempDir.resolve("AGENTS.md.sha256"), hash + "  AGENTS.md\n");
+      Files.write(
+          tempDir.resolve("AGENTS.md.sha256"),
+          (hash + "  AGENTS.md\n").getBytes(StandardCharsets.UTF_8));
 
       // When/Then
       assertDoesNotThrow(() -> mojo.execute());
@@ -187,9 +202,11 @@ class HashVerifyMojoTest {
       setField(mojo, "baseDir", "");
       when(project.getBasedir()).thenReturn(tempDir.toFile());
       Path mdFile = tempDir.resolve("test.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-256", false);
-      Files.writeString(tempDir.resolve("test.md.sha256"), hash + "  test.md\n");
+      Files.write(
+          tempDir.resolve("test.md.sha256"),
+          (hash + "  test.md\n").getBytes(StandardCharsets.UTF_8));
 
       // When/Then
       assertDoesNotThrow(() -> mojo.execute());
@@ -201,9 +218,11 @@ class HashVerifyMojoTest {
       // Given
       setField(mojo, "algorithmBits", 512);
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-512", false);
-      Files.writeString(tempDir.resolve("AGENTS.md.sha512"), hash + "  AGENTS.md\n");
+      Files.write(
+          tempDir.resolve("AGENTS.md.sha512"),
+          (hash + "  AGENTS.md\n").getBytes(StandardCharsets.UTF_8));
 
       // When/Then
       assertDoesNotThrow(() -> mojo.execute());
@@ -214,13 +233,15 @@ class HashVerifyMojoTest {
     void shouldFailWhenHashFileTooLarge() throws Exception {
       // Given
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       // Create a hash file larger than 8 KiB
       StringBuilder oversized = new StringBuilder();
       for (int i = 0; i < 9000; i++) {
         oversized.append('a');
       }
-      Files.writeString(tempDir.resolve("AGENTS.md.sha256"), oversized.toString());
+      Files.write(
+          tempDir.resolve("AGENTS.md.sha256"),
+          oversized.toString().getBytes(StandardCharsets.UTF_8));
 
       // When/Then
       MojoExecutionException ex = assertThrows(MojoExecutionException.class, () -> mojo.execute());
@@ -232,10 +253,12 @@ class HashVerifyMojoTest {
     void shouldFailWhenFilenameMismatch() throws Exception {
       // Given
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-256", false);
       // Write hash file with wrong filename
-      Files.writeString(tempDir.resolve("AGENTS.md.sha256"), hash + "  WRONG_FILE.md\n");
+      Files.write(
+          tempDir.resolve("AGENTS.md.sha256"),
+          (hash + "  WRONG_FILE.md\n").getBytes(StandardCharsets.UTF_8));
 
       // When/Then
       MojoExecutionException ex = assertThrows(MojoExecutionException.class, () -> mojo.execute());
@@ -247,10 +270,11 @@ class HashVerifyMojoTest {
     void shouldPassWhenHashOnlyFormat() throws Exception {
       // Given
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-256", false);
       // Hash-only format (no embedded filename)
-      Files.writeString(tempDir.resolve("AGENTS.md.sha256"), hash + "\n");
+      Files.write(
+          tempDir.resolve("AGENTS.md.sha256"), (hash + "\n").getBytes(StandardCharsets.UTF_8));
 
       // When/Then
       assertDoesNotThrow(() -> mojo.execute());
@@ -272,9 +296,11 @@ class HashVerifyMojoTest {
       setField(mojo, "resumeFromModule", "module-a");
 
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-256", false);
-      Files.writeString(tempDir.resolve("AGENTS.md.sha256"), hash + "  AGENTS.md\n");
+      Files.write(
+          tempDir.resolve("AGENTS.md.sha256"),
+          (hash + "  AGENTS.md\n").getBytes(StandardCharsets.UTF_8));
 
       mojo.execute();
 
@@ -292,9 +318,11 @@ class HashVerifyMojoTest {
       setField(mojo, "resumeFromModule", "module-b");
 
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-256", false);
-      Files.writeString(tempDir.resolve("AGENTS.md.sha256"), hash + "  AGENTS.md\n");
+      Files.write(
+          tempDir.resolve("AGENTS.md.sha256"),
+          (hash + "  AGENTS.md\n").getBytes(StandardCharsets.UTF_8));
 
       assertDoesNotThrow(() -> mojo.execute());
     }
@@ -342,9 +370,11 @@ class HashVerifyMojoTest {
 
       // Given a valid file to pass traversal
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-256", false);
-      Files.writeString(tempDir.resolve("AGENTS.md.sha256"), hash + "  AGENTS.md\n");
+      Files.write(
+          tempDir.resolve("AGENTS.md.sha256"),
+          (hash + "  AGENTS.md\n").getBytes(StandardCharsets.UTF_8));
 
       mojo.execute();
 
@@ -362,9 +392,11 @@ class HashVerifyMojoTest {
     void shouldUseCustomOutputExtension() throws Exception {
       setField(mojo, "outputExtension", ".customhash");
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-256", false);
-      Files.writeString(tempDir.resolve("AGENTS.md.customhash"), hash + "  AGENTS.md\n");
+      Files.write(
+          tempDir.resolve("AGENTS.md.customhash"),
+          (hash + "  AGENTS.md\n").getBytes(StandardCharsets.UTF_8));
 
       assertDoesNotThrow(() -> mojo.execute());
     }
@@ -375,9 +407,11 @@ class HashVerifyMojoTest {
       setField(mojo, "baseDir", "");
       when(project.getBasedir()).thenReturn(tempDir.toFile());
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-256", false);
-      Files.writeString(tempDir.resolve("AGENTS.md.sha256"), hash + "  AGENTS.md\n");
+      Files.write(
+          tempDir.resolve("AGENTS.md.sha256"),
+          (hash + "  AGENTS.md\n").getBytes(StandardCharsets.UTF_8));
 
       assertDoesNotThrow(() -> mojo.execute());
     }
@@ -387,9 +421,11 @@ class HashVerifyMojoTest {
     void shouldHandleEmptySkipDirs() throws Exception {
       setField(mojo, "skipDirs", " , \t,target,");
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-256", false);
-      Files.writeString(tempDir.resolve("AGENTS.md.sha256"), hash + "  AGENTS.md\n");
+      Files.write(
+          tempDir.resolve("AGENTS.md.sha256"),
+          (hash + "  AGENTS.md\n").getBytes(StandardCharsets.UTF_8));
 
       assertDoesNotThrow(() -> mojo.execute());
     }
@@ -400,17 +436,20 @@ class HashVerifyMojoTest {
       setField(mojo, "gitignoreAutoExclude", true);
       setField(mojo, "forceIncludes", "**/*.txt.sha256");
 
-      Files.writeString(tempDir.resolve(".gitignore"), "**/*.md.sha256\n");
+      Files.write(
+          tempDir.resolve(".gitignore"), ("**/*.md.sha256\n").getBytes(StandardCharsets.UTF_8));
 
       Path subdir = tempDir.resolve("subdir");
       Files.createDirectory(subdir);
 
       Path ignoredMdFile = subdir.resolve("AGENTS.md.sha256");
-      Files.writeString(ignoredMdFile, "invalid-hash");
+      Files.write(ignoredMdFile, ("invalid-hash").getBytes(StandardCharsets.UTF_8));
       Path forcedTxtFile = subdir.resolve("forced.txt");
-      Files.writeString(forcedTxtFile, "content");
+      Files.write(forcedTxtFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(forcedTxtFile, "SHA-256", false);
-      Files.writeString(subdir.resolve("forced.txt.sha256"), hash + "  forced.txt\n");
+      Files.write(
+          subdir.resolve("forced.txt.sha256"),
+          (hash + "  forced.txt\n").getBytes(StandardCharsets.UTF_8));
 
       // The ignored file should be skipped, so it won't throw an execution exception from an
       // invalid hash
@@ -432,11 +471,11 @@ class HashVerifyMojoTest {
     @DisplayName("should pass verification when central hashes match")
     void shouldPassCentralMatch() throws Exception {
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-256", false);
 
       Path centralFile = tempDir.resolve("ai-integrity.sha256");
-      Files.writeString(centralFile, hash + "  AGENTS.md\n");
+      Files.write(centralFile, (hash + "  AGENTS.md\n").getBytes(StandardCharsets.UTF_8));
 
       setField(mojo, "generateAuditReport", true);
       setField(mojo, "buildDirectory", tempDir.resolve("target").toString());
@@ -449,10 +488,10 @@ class HashVerifyMojoTest {
     @DisplayName("should fail when tampered in central mode")
     void shouldFailCentralMismatch() throws Exception {
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "tampered");
+      Files.write(mdFile, "tampered".getBytes(StandardCharsets.UTF_8));
 
       Path centralFile = tempDir.resolve("ai-integrity.sha256");
-      Files.writeString(centralFile, "00000000000  AGENTS.md\n");
+      Files.write(centralFile, "00000000000  AGENTS.md\n".getBytes(StandardCharsets.UTF_8));
 
       setField(mojo, "generateAuditReport", true);
       setField(mojo, "buildDirectory", tempDir.resolve("target").toString());
@@ -466,7 +505,7 @@ class HashVerifyMojoTest {
     @DisplayName("should skip empty and invalid lines in central mode")
     void shouldSkipEmptyLines() throws Exception {
       Path centralFile = tempDir.resolve("ai-integrity.sha256");
-      Files.writeString(centralFile, "\n   \nONLY_HASH\n");
+      Files.write(centralFile, "\n   \nONLY_HASH\n".getBytes(StandardCharsets.UTF_8));
       assertDoesNotThrow(() -> mojo.execute());
     }
 
@@ -477,13 +516,13 @@ class HashVerifyMojoTest {
       setField(mojo, "buildDirectory", tempDir.resolve("target").toString());
 
       Path centralFile = tempDir.resolve("ai-integrity.sha256");
-      Files.writeString(centralFile, "00000000  MISSING.md\n");
+      Files.write(centralFile, "00000000  MISSING.md\n".getBytes(StandardCharsets.UTF_8));
 
       MojoExecutionException ex = assertThrows(MojoExecutionException.class, () -> mojo.execute());
       assertTrue(ex.getMessage().contains("FAILED"));
 
       Path reportFile = tempDir.resolve("target").resolve("ai-integrity-report.json");
-      String content = Files.readString(reportFile);
+      String content = new String(Files.readAllBytes(reportFile), StandardCharsets.UTF_8);
       assertTrue(content.contains("\"status\": \"MISSING\""));
     }
 
@@ -510,9 +549,11 @@ class HashVerifyMojoTest {
     void shouldGenerateReportByDefault() throws Exception {
       // Given
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-256", false);
-      Files.writeString(tempDir.resolve("AGENTS.md.sha256"), hash + "  AGENTS.md\n");
+      Files.write(
+          tempDir.resolve("AGENTS.md.sha256"),
+          (hash + "  AGENTS.md\n").getBytes(StandardCharsets.UTF_8));
 
       // When
       mojo.execute();
@@ -520,7 +561,7 @@ class HashVerifyMojoTest {
       // Then
       Path reportFile = tempDir.resolve("target").resolve("ai-integrity-report.json");
       assertTrue(Files.exists(reportFile), "Audit report should exist");
-      String content = Files.readString(reportFile);
+      String content = new String(Files.readAllBytes(reportFile), StandardCharsets.UTF_8);
       assertTrue(
           content.contains("\"status\": \"VERIFIED\""), "Report should contain verified status");
     }
@@ -533,9 +574,11 @@ class HashVerifyMojoTest {
       setField(mojo, "centralReportFile", customReport.toString());
 
       Path mdFile = tempDir.resolve("AGENTS.md");
-      Files.writeString(mdFile, "content");
+      Files.write(mdFile, "content".getBytes(StandardCharsets.UTF_8));
       String hash = HashUtils.computeHash(mdFile, "SHA-256", false);
-      Files.writeString(tempDir.resolve("AGENTS.md.sha256"), hash + "  AGENTS.md\n");
+      Files.write(
+          tempDir.resolve("AGENTS.md.sha256"),
+          (hash + "  AGENTS.md\n").getBytes(StandardCharsets.UTF_8));
 
       // When
       mojo.execute();
